
xsessiondir = $(datadir)/xsessions

dist_xsession_DATA = \
	icewm.desktop \
	icewm-session.desktop

nodist_pkgdata_DATA = \
	keys \
	menu \
	toolbar \
	programs \
	winoptions

nobase_dist_pkgdata_DATA = \
	icons/app_16x16.xpm \
	icons/app_32x32.xpm \
	icons/bomb_16x16.xpm \
	icons/bomb_32x32.xpm \
	icons/communicator-abook_16x16.xpm \
	icons/communicator-abook_32x32.xpm \
	icons/communicator-browser_16x16.xpm \
	icons/communicator-browser_32x32.xpm \
	icons/communicator-composer_16x16.xpm \
	icons/communicator-composer_32x32.xpm \
	icons/communicator-discussion_16x16.xpm \
	icons/communicator-discussion_32x32.xpm \
	icons/communicator-mail_16x16.xpm \
	icons/communicator-mail_32x32.xpm \
	icons/emacs_16x16.xpm \
	icons/emacs_32x32.xpm \
	icons/file_16x16.xpm \
	icons/file_32x32.xpm \
	icons/folder_16x16.xpm \
	icons/folder_32x32.xpm \
	icons/fte_16x16.xpm \
	icons/fte_32x32.xpm \
	icons/gimp_16x16.xpm \
	icons/gimp_32x32.xpm \
	icons/gnome_16x16.xpm \
	icons/java_16x16.xpm \
	icons/java_32x32.xpm \
	icons/kde_16x16.xpm \
	icons/koules_16x16.xpm \
	icons/koules_32x32.xpm \
	icons/lock_16x16.xpm \
	icons/lock_32x32.xpm \
	icons/lock_48x48.xpm \
	icons/navigator_16x16.xpm \
	icons/navigator_32x32.xpm \
	icons/netscape_16x16.xpm \
	icons/netscape_32x32.xpm \
	icons/pdf_16x16.xpm \
	icons/pdf_32x32.xpm \
	icons/vim_16x16.xpm \
	icons/vim_32x32.xpm \
	icons/vim_48x48.xpm \
	icons/xisp_16x16.xpm \
	icons/xisp_32x32.xpm \
	icons/xload_16x16.xpm \
	icons/xload_32x32.xpm \
	icons/xterm_16x16.xpm \
	icons/xterm_32x32.xpm \
	icons/xv_16x16.xpm \
	icons/xv_32x32.xpm \
	ledclock/a.xpm \
	ledclock/colon.xpm \
	ledclock/dot.xpm \
	ledclock/m.xpm \
	ledclock/n0.xpm \
	ledclock/n1.xpm \
	ledclock/n2.xpm \
	ledclock/n3.xpm \
	ledclock/n4.xpm \
	ledclock/n5.xpm \
	ledclock/n6.xpm \
	ledclock/n7.xpm \
	ledclock/n8.xpm \
	ledclock/n9.xpm \
	ledclock/percent.xpm \
	ledclock/p.xpm \
	ledclock/slash.xpm \
	ledclock/space.xpm \
	mailbox/errmail.xpm \
	mailbox/mail.xpm \
	mailbox/newmail.xpm \
	mailbox/nomail.xpm \
	mailbox/unreadmail.xpm \
	taskbar/collapse.xpm \
	taskbar/debian.xpm \
	taskbar/desktop.xpm \
	taskbar/expand.xpm \
	taskbar/icewm.xpm \
	taskbar/linux1.xpm \
	taskbar/linux20.xpm \
	taskbar/linux2.xpm \
	taskbar/linux.xpm \
	taskbar/start.xpm \
	taskbar/windows.xpm \
	taskbar/xfreeos2.xpm \
	themes/gtk2/closeA.xpm \
	themes/gtk2/closeI.xpm \
	themes/gtk2/default.theme \
	themes/gtk2/maximizeA.xpm \
	themes/gtk2/maximizeI.xpm \
	themes/gtk2/menuButtonA.xpm \
	themes/gtk2/menuButtonI.xpm \
	themes/gtk2/minimizeA.xpm \
	themes/gtk2/minimizeI.xpm \
	themes/gtk2/restoreA.xpm \
	themes/gtk2/restoreI.xpm \
	themes/gtk2/default.jpg \
	themes/icedesert/closeA.xpm \
	themes/icedesert/closeI.xpm \
	themes/icedesert/closeO.xpm \
	themes/icedesert/default.theme \
	themes/icedesert/maximizeA.xpm \
	themes/icedesert/maximizeI.xpm \
	themes/icedesert/maximizeO.xpm \
	themes/icedesert/menuButtonA.xpm \
	themes/icedesert/menuButtonI.xpm \
	themes/icedesert/menuButtonO.xpm \
	themes/icedesert/minimizeA.xpm \
	themes/icedesert/minimizeI.xpm \
	themes/icedesert/minimizeO.xpm \
	themes/icedesert/restoreA.xpm \
	themes/icedesert/restoreI.xpm \
	themes/icedesert/restoreO.xpm \
	themes/icedesert/titleAB.xpm \
	themes/icedesert/titleAT.xpm \
	themes/icedesert/titleIB.xpm \
	themes/icedesert/titleIT.xpm \
	themes/icedesert/default.jpeg \
	themes/Infadel2/closeA.xpm \
	themes/Infadel2/closeI.xpm \
	themes/Infadel2/cursors/left.xpm \
	themes/Infadel2/cursors/move.xpm \
	themes/Infadel2/cursors/right.xpm \
	themes/Infadel2/cursors/sizeBL.xpm \
	themes/Infadel2/cursors/sizeBR.xpm \
	themes/Infadel2/cursors/sizeB.xpm \
	themes/Infadel2/cursors/sizeL.xpm \
	themes/Infadel2/cursors/sizeR.xpm \
	themes/Infadel2/cursors/sizeTL.xpm \
	themes/Infadel2/cursors/sizeTR.xpm \
	themes/Infadel2/cursors/sizeT.xpm \
	themes/Infadel2/default.theme \
	themes/Infadel2/depthA.xpm \
	themes/Infadel2/depthI.xpm \
	themes/Infadel2/Ergonomic.theme \
	themes/Infadel2/fonts.dir.default \
	themes/Infadel2/hideA.xpm \
	themes/Infadel2/hideI.xpm \
	themes/Infadel2/icons/app_16x16.xpm \
	themes/Infadel2/icons/folder_16x16.xpm \
	themes/Infadel2/icons/folder_32x32.xpm \
	themes/Infadel2/mailbox/errmail.xpm \
	themes/Infadel2/mailbox/mail.xpm \
	themes/Infadel2/mailbox/newmail.xpm \
	themes/Infadel2/mailbox/nomail.xpm \
	themes/Infadel2/mailbox/unreadmail.xpm \
	themes/Infadel2/maximizeA.xpm \
	themes/Infadel2/maximizeI.xpm \
	themes/Infadel2/menuButtonA.xpm \
	themes/Infadel2/menuButtonI.xpm \
	themes/Infadel2/minimizeA.xpm \
	themes/Infadel2/minimizeI.xpm \
	themes/Infadel2/Overloaded.theme \
	themes/Infadel2/restoreA.xpm \
	themes/Infadel2/restoreI.xpm \
	themes/Infadel2/rolldownA.xpm \
	themes/Infadel2/rolldownI.xpm \
	themes/Infadel2/rollupA.xpm \
	themes/Infadel2/rollupI.xpm \
	themes/Infadel2/snap.pcf \
	themes/Infadel2/taskbar/linux.xpm \
	themes/Infadel2/taskbar/start.xpm \
	themes/Infadel2/taskbar/windows.xpm \
	themes/Infadel2/titleAB.xpm \
	themes/Infadel2/titleAJ.xpm \
	themes/Infadel2/titleAM.xpm \
	themes/Infadel2/titleAP.xpm \
	themes/Infadel2/titleAQ.xpm \
	themes/Infadel2/titleAR.xpm \
	themes/Infadel2/titleAS.xpm \
	themes/Infadel2/titleAT.xpm \
	themes/Infadel2/titleIB.xpm \
	themes/Infadel2/titleIJ.xpm \
	themes/Infadel2/titleIM.xpm \
	themes/Infadel2/titleIP.xpm \
	themes/Infadel2/titleIQ.xpm \
	themes/Infadel2/titleIR.xpm \
	themes/Infadel2/titleIS.xpm \
	themes/Infadel2/titleIT.xpm \
	themes/Infadel2/default.jpg \
	themes/Infadel2/default2.jpg \
	themes/Infadel2/default.jpg \
	themes/metal2/closeA.xpm \
	themes/metal2/closeI.xpm \
	themes/metal2/default.theme \
	themes/metal2/depthA.xpm \
	themes/metal2/depthI.xpm \
	themes/metal2/dframeABL.xpm \
	themes/metal2/dframeABR.xpm \
	themes/metal2/dframeAB.xpm \
	themes/metal2/dframeAL.xpm \
	themes/metal2/dframeAR.xpm \
	themes/metal2/dframeATL.xpm \
	themes/metal2/dframeATR.xpm \
	themes/metal2/dframeAT.xpm \
	themes/metal2/dframeIBL.xpm \
	themes/metal2/dframeIBR.xpm \
	themes/metal2/dframeIB.xpm \
	themes/metal2/dframeIL.xpm \
	themes/metal2/dframeIR.xpm \
	themes/metal2/dframeITL.xpm \
	themes/metal2/dframeITR.xpm \
	themes/metal2/dframeIT.xpm \
	themes/metal2/frameABL.xpm \
	themes/metal2/frameABR.xpm \
	themes/metal2/frameAB.xpm \
	themes/metal2/frameAL.xpm \
	themes/metal2/frameAR.xpm \
	themes/metal2/frameATL.xpm \
	themes/metal2/frameATR.xpm \
	themes/metal2/frameAT.xpm \
	themes/metal2/frameIBL.xpm \
	themes/metal2/frameIBR.xpm \
	themes/metal2/frameIB.xpm \
	themes/metal2/frameIL.xpm \
	themes/metal2/frameIR.xpm \
	themes/metal2/frameITL.xpm \
	themes/metal2/frameITR.xpm \
	themes/metal2/frameIT.xpm \
	themes/metal2/hideA.xpm \
	themes/metal2/hideI.xpm \
	themes/metal2/maximizeA.xpm \
	themes/metal2/maximizeI.xpm \
	themes/metal2/menuButtonA.xpm \
	themes/metal2/menuButtonI.xpm \
	themes/metal2/minimizeA.xpm \
	themes/metal2/minimizeI.xpm \
	themes/metal2/restoreA.xpm \
	themes/metal2/restoreI.xpm \
	themes/metal2/rolldownA.xpm \
	themes/metal2/rolldownI.xpm \
	themes/metal2/rollupA.xpm \
	themes/metal2/rollupI.xpm \
	themes/metal2/titleAB.xpm \
	themes/metal2/titleAL.xpm \
	themes/metal2/titleAM.xpm \
	themes/metal2/titleAP.xpm \
	themes/metal2/titleAR.xpm \
	themes/metal2/titleAS.xpm \
	themes/metal2/titleAT.xpm \
	themes/metal2/titleIB.xpm \
	themes/metal2/titleIL.xpm \
	themes/metal2/titleIM.xpm \
	themes/metal2/titleIP.xpm \
	themes/metal2/titleIR.xpm \
	themes/metal2/titleIS.xpm \
	themes/metal2/titleIT.xpm \
	themes/metal2/default.jpeg \
	themes/motif/close.xpm \
	themes/motif/default.theme \
	themes/motif/maximize.xpm \
	themes/motif/menu.xpm \
	themes/motif/minimize.xpm \
	themes/motif/restore.xpm \
	themes/motif/default.jpeg \
	themes/nice2/closeA.xpm \
	themes/nice2/closeI.xpm \
	themes/nice2/default.theme \
	themes/nice2/maximizeA.xpm \
	themes/nice2/maximizeI.xpm \
	themes/nice2/menuButtonA.xpm \
	themes/nice2/menuButtonI.xpm \
	themes/nice2/minimizeA.xpm \
	themes/nice2/minimizeI.xpm \
	themes/nice2/restoreA.xpm \
	themes/nice2/restoreI.xpm \
	themes/nice2/titleAB.xpm \
	themes/nice2/titleAT.xpm \
	themes/nice2/titleIB.xpm \
	themes/nice2/titleIT.xpm \
	themes/nice2/default.jpg \
	themes/nice/blue.theme \
	themes/nice/close.xpm \
	themes/nice/default.theme \
	themes/nice/hide.xpm \
	themes/nice/maximize.xpm \
	themes/nice/minimize.xpm \
	themes/nice/restore.xpm \
	themes/nice/rolldown.xpm \
	themes/nice/rollup.xpm \
	themes/nice/default.jpg \
	themes/nice/default1.jpg \
	themes/warp3/close.xpm \
	themes/warp3/default.theme \
	themes/warp3/hide.xpm \
	themes/warp3/maximize.xpm \
	themes/warp3/minimize.xpm \
	themes/warp3/restore.xpm \
	themes/warp3/rolldown.xpm \
	themes/warp3/rollup.xpm \
	themes/warp3/default.jpeg \
	themes/warp4/close.xpm \
	themes/warp4/default.theme \
	themes/warp4/hide.xpm \
	themes/warp4/maximize.xpm \
	themes/warp4/minimize.xpm \
	themes/warp4/restore.xpm \
	themes/warp4/default.jpeg \
	themes/win95/close.xpm \
	themes/win95/default.theme \
	themes/win95/maximize.xpm \
	themes/win95/minimize.xpm \
	themes/win95/restore.xpm \
	themes/win95/default.jpg \
	themes/yellowmotif/close.xpm \
	themes/yellowmotif/default.theme \
	themes/yellowmotif/maximize.xpm \
	themes/yellowmotif/menu.xpm \
	themes/yellowmotif/minimize.xpm \
	themes/yellowmotif/restore.xpm \
	themes/yellowmotif/default.jpg \
	themes/default/closeA.xpm \
	themes/default/closeI.xpm \
	themes/default/default.theme \
	themes/default/depthA.xpm \
	themes/default/depthI.xpm \
	themes/default/hideA.xpm \
	themes/default/hideI.xpm \
	themes/default/maximizeA.xpm \
	themes/default/maximizeI.xpm \
	themes/default/menuButtonA.xpm \
	themes/default/menuButtonI.xpm \
	themes/default/minimizeA.xpm \
	themes/default/minimizeI.xpm \
	themes/default/restoreA.xpm \
	themes/default/restoreI.xpm \
	themes/default/rolldownA.xpm \
	themes/default/rolldownI.xpm \
	themes/default/rollupA.xpm \
	themes/default/rollupI.xpm \
	themes/default/default.png \
	themes/WinClassic2/buttonA.xpm \
	themes/WinClassic2/buttonI.xpm \
	themes/WinClassic2/closeA.xpm \
	themes/WinClassic2/closeI.xpm \
	themes/WinClassic2/default.theme \
	themes/WinClassic2/dialogbg.xpm \
	themes/WinClassic2/frameABL.xpm \
	themes/WinClassic2/frameABR.xpm \
	themes/WinClassic2/frameAB.xpm \
	themes/WinClassic2/frameAL.xpm \
	themes/WinClassic2/frameAR.xpm \
	themes/WinClassic2/frameATL.xpm \
	themes/WinClassic2/frameATR.xpm \
	themes/WinClassic2/frameAT.xpm \
	themes/WinClassic2/frameIBL.xpm \
	themes/WinClassic2/frameIBR.xpm \
	themes/WinClassic2/frameIB.xpm \
	themes/WinClassic2/frameIL.xpm \
	themes/WinClassic2/frameIR.xpm \
	themes/WinClassic2/frameITL.xpm \
	themes/WinClassic2/frameITR.xpm \
	themes/WinClassic2/frameIT.xpm \
	themes/WinClassic2/helpA.xpm \
	themes/WinClassic2/helpI.xpm \
	themes/WinClassic2/hideA.xpm \
	themes/WinClassic2/hideI.xpm \
	themes/WinClassic2/logoutbg.xpm \
	themes/WinClassic2/maximizeA.xpm \
	themes/WinClassic2/maximizeI.xpm \
	themes/WinClassic2/menuButtonA.xpm \
	themes/WinClassic2/menuButtonI.xpm \
	themes/WinClassic2/minimizeA.xpm \
	themes/WinClassic2/minimizeI.xpm \
	themes/WinClassic2/README \
	themes/WinClassic2/restoreA.xpm \
	themes/WinClassic2/restoreI.xpm \
	themes/WinClassic2/titleAB.xpm \
	themes/WinClassic2/titleAT.xpm \
	themes/WinClassic2/titleIB.xpm \
	themes/WinClassic2/titleIT.xpm \
	themes/WinClassic2/wallpaper.png \
	themes/WinClassic2/prefoverride \
	themes/WinClassic2/icons/app_16x16.xpm \
	themes/WinClassic2/icons/app_32x32.xpm \
	themes/WinClassic2/icons/excel_16x16.xpm \
	themes/WinClassic2/icons/excel_32x32.xpm \
	themes/WinClassic2/icons/explorer_16x16.xpm \
	themes/WinClassic2/icons/file_16x16.xpm \
	themes/WinClassic2/icons/file_32x32.xpm \
	themes/WinClassic2/icons/folder_16x16.xpm \
	themes/WinClassic2/icons/folder2_16x16.xpm \
	themes/WinClassic2/icons/help_16x16.xpm \
	themes/WinClassic2/icons/hibernate_16x16.xpm \
	themes/WinClassic2/icons/lock_16x16.xpm \
	themes/WinClassic2/icons/logout_16x16.xpm \
	themes/WinClassic2/icons/mixer_16x16.xpm \
	themes/WinClassic2/icons/mplayer_16x16.xpm \
	themes/WinClassic2/icons/nedit_16x16.xpm \
	themes/WinClassic2/icons/notepad_16x16.xpm \
	themes/WinClassic2/icons/paint_16x16.xpm \
	themes/WinClassic2/icons/programs_16x16.xpm \
	themes/WinClassic2/icons/reboot_16x16.xpm \
	themes/WinClassic2/icons/run_16x16.xpm \
	themes/WinClassic2/icons/run2_16x16.xpm \
	themes/WinClassic2/icons/settings_16x16.xpm \
	themes/WinClassic2/icons/settings2_16x16.xpm \
	themes/WinClassic2/icons/shutdown_16x16.xpm \
	themes/WinClassic2/icons/wireless_16x16.xpm \
	themes/WinClassic2/icons/word_16x16.xpm \
	themes/WinClassic2/icons/word_32x32.xpm \
	themes/WinClassic2/icons/wordpad_16x16.xpm \
	themes/WinClassic2/icons/xmms_16x16.xpm \
	themes/WinClassic2/icons/xmms_32x32.xpm \
	themes/WinClassic2/icons/xpaint_16x16.xpm \
	themes/WinClassic2/icons/xterm_16x16.xpm \
	themes/WinClassic2/icons/xterm_32x32.xpm \
	themes/WinClassic2/taskbar/desktop-win2k.xpm \
	themes/WinClassic2/taskbar/desktop-winxp.xpm \
	themes/WinClassic2/taskbar/desktop.xpm \
	themes/WinClassic2/taskbar/icewm2.xpm \
	themes/WinClassic2/taskbar/icewm3.xpm \
	themes/WinClassic2/taskbar/icewm-win2k-border.xpm \
	themes/WinClassic2/taskbar/icewm-win2k.xpm \
	themes/WinClassic2/taskbar/icewm-winxp.xpm \
	themes/WinClassic2/taskbar/icewm.xpm \
	themes/WinClassic2/taskbar/taskbuttonactive.xpm \
	themes/WinClassic2/taskbar/taskbuttonbg.xpm \
	themes/WinClassic2/taskbar/taskbuttonminimized.xpm \
	themes/WinClassic2/taskbar/toolbuttonbg.xpm \
	themes/WinClassic2/taskbar/workspacebuttonactive.xpm \
	themes/WinClassic2/taskbar/workspacebuttonbg.xpm \
	themes/Elegance_ice/background.jpg \
	themes/Elegance_ice/buttonA.xpm \
	themes/Elegance_ice/buttonI.xpm \
	themes/Elegance_ice/closeA.xpm \
	themes/Elegance_ice/closeI.xpm \
	themes/Elegance_ice/closeO.xpm \
	themes/Elegance_ice/default.theme \
	themes/Elegance_ice/dframeABL.xpm \
	themes/Elegance_ice/dframeABR.xpm \
	themes/Elegance_ice/dframeAB.xpm \
	themes/Elegance_ice/dframeAL.xpm \
	themes/Elegance_ice/dframeAR.xpm \
	themes/Elegance_ice/dframeATL.xpm \
	themes/Elegance_ice/dframeATR.xpm \
	themes/Elegance_ice/dframeAT.xpm \
	themes/Elegance_ice/dframeIBL.xpm \
	themes/Elegance_ice/dframeIBR.xpm \
	themes/Elegance_ice/dframeIB.xpm \
	themes/Elegance_ice/dframeIL.xpm \
	themes/Elegance_ice/dframeIR.xpm \
	themes/Elegance_ice/dframeITL.xpm \
	themes/Elegance_ice/dframeITR.xpm \
	themes/Elegance_ice/dframeIT.xpm \
	themes/Elegance_ice/dialogbg.xpm \
	themes/Elegance_ice/frameABL.xpm \
	themes/Elegance_ice/frameABR.xpm \
	themes/Elegance_ice/frameAB.xpm \
	themes/Elegance_ice/frameAL.xpm \
	themes/Elegance_ice/frameAR.xpm \
	themes/Elegance_ice/frameATL.xpm \
	themes/Elegance_ice/frameATR.xpm \
	themes/Elegance_ice/frameAT.xpm \
	themes/Elegance_ice/frameIBL.xpm \
	themes/Elegance_ice/frameIBR.xpm \
	themes/Elegance_ice/frameIB.xpm \
	themes/Elegance_ice/frameIL.xpm \
	themes/Elegance_ice/frameIR.xpm \
	themes/Elegance_ice/frameITL.xpm \
	themes/Elegance_ice/frameITR.xpm \
	themes/Elegance_ice/frameIT.xpm \
	themes/Elegance_ice/logoutbg.xpm \
	themes/Elegance_ice/maximizeA.xpm \
	themes/Elegance_ice/maximizeI.xpm \
	themes/Elegance_ice/maximizeO.xpm \
	themes/Elegance_ice/menubg.xpm \
	themes/Elegance_ice/menusel.xpm \
	themes/Elegance_ice/minimizeA.xpm \
	themes/Elegance_ice/minimizeI.xpm \
	themes/Elegance_ice/minimizeO.xpm \
	themes/Elegance_ice/restoreA.xpm \
	themes/Elegance_ice/restoreI.xpm \
	themes/Elegance_ice/restoreO.xpm \
	themes/Elegance_ice/rolldownA.xpm \
	themes/Elegance_ice/rolldownI.xpm \
	themes/Elegance_ice/rolldownO.xpm \
	themes/Elegance_ice/rollupA.xpm \
	themes/Elegance_ice/rollupI.xpm \
	themes/Elegance_ice/rollupO.xpm \
	themes/Elegance_ice/switchbg.xpm \
	themes/Elegance_ice/titleAB.xpm \
	themes/Elegance_ice/titleAJ.xpm \
	themes/Elegance_ice/titleAL.xpm \
	themes/Elegance_ice/titleAM.xpm \
	themes/Elegance_ice/titleAP.xpm \
	themes/Elegance_ice/titleAQ.xpm \
	themes/Elegance_ice/titleAR.xpm \
	themes/Elegance_ice/titleAS.xpm \
	themes/Elegance_ice/titleAT.xpm \
	themes/Elegance_ice/titleIB.xpm \
	themes/Elegance_ice/titleIJ.xpm \
	themes/Elegance_ice/titleIL.xpm \
	themes/Elegance_ice/titleIM.xpm \
	themes/Elegance_ice/titleIP.xpm \
	themes/Elegance_ice/titleIQ.xpm \
	themes/Elegance_ice/titleIR.xpm \
	themes/Elegance_ice/titleIS.xpm \
	themes/Elegance_ice/titleIT.xpm \
	themes/Elegance_ice/icons/firefox.xpm \
	themes/Elegance_ice/icons/folder_16x16.xpm \
	themes/Elegance_ice/icons/folder_32x32.xpm \
	themes/Elegance_ice/icons/xterm_16x16.xpm \
	themes/Elegance_ice/icons/xterm_32x32.xpm \
	themes/Elegance_ice/taskbar/collapse.xpm \
	themes/Elegance_ice/taskbar/desktop.xpm \
	themes/Elegance_ice/taskbar/expand.xpm \
	themes/Elegance_ice/taskbar/icewm0.xpm \
	themes/Elegance_ice/taskbar/icewm.xpm \
	themes/Elegance_ice/taskbar/taskbarbg.xpm \
	themes/Elegance_ice/taskbar/taskbuttonactive.xpm \
	themes/Elegance_ice/taskbar/taskbuttonbg.xpm \
	themes/Elegance_ice/taskbar/taskbuttonminimized.xpm \
	themes/Elegance_ice/taskbar/toolbuttonbg.xpm \
	themes/Elegance_ice/taskbar/windows.xpm \
	themes/Elegance_ice/taskbar/workspacebuttonactive.xpm \
	themes/Elegance_ice/taskbar/workspacebuttonbg.xpm