
xsessiondir = $(datadir)/xsessions

dist_xsession_DATA = \
	icewm.desktop \
	icewm-session.desktop

nodist_pkgdata_DATA = \
	keys \
	menu \
	toolbar \
	programs \
	winoptions

nobase_dist_pkgdata_DATA = \
	icons/about_16x16.xpm \
	icons/about_32x32.xpm \
	icons/app_16x16.xpm \
	icons/app_32x32.xpm \
	icons/bomb_16x16.xpm \
	icons/bomb_32x32.xpm \
	icons/communicator-abook_16x16.xpm \
	icons/communicator-abook_32x32.xpm \
	icons/communicator-browser_16x16.xpm \
	icons/communicator-browser_32x32.xpm \
	icons/communicator-composer_16x16.xpm \
	icons/communicator-composer_32x32.xpm \
	icons/communicator-discussion_16x16.xpm \
	icons/communicator-discussion_32x32.xpm \
	icons/communicator-mail_16x16.xpm \
	icons/communicator-mail_32x32.xpm \
	icons/emacs_16x16.xpm \
	icons/emacs_32x32.xpm \
	icons/file_16x16.xpm \
	icons/file_32x32.xpm \
	icons/focus_16x16.xpm \
	icons/focus_32x32.xpm \
	icons/focus_16x16.png \
	icons/focus_32x32.png \
	icons/folder_16x16.xpm \
	icons/folder_32x32.xpm \
	icons/fte_16x16.xpm \
	icons/fte_32x32.xpm \
	icons/gimp_16x16.xpm \
	icons/gimp_32x32.xpm \
	icons/gnome_16x16.xpm \
	icons/help_16x16.xpm \
	icons/help_32x32.xpm \
	icons/java_16x16.xpm \
	icons/java_32x32.xpm \
	icons/kde_16x16.xpm \
	icons/key_16x16.png \
	icons/key_32x32.png \
	icons/koules_16x16.xpm \
	icons/koules_32x32.xpm \
	icons/lock_16x16.xpm \
	icons/lock_32x32.xpm \
	icons/lock_48x48.xpm \
	icons/logout_16x16.xpm \
	icons/logout_32x32.xpm \
	icons/navigator_16x16.xpm \
	icons/navigator_32x32.xpm \
	icons/netscape_16x16.xpm \
	icons/netscape_32x32.xpm \
	icons/pdf_16x16.xpm \
	icons/pdf_32x32.xpm \
	icons/pref_16x16.png \
	icons/pref_32x32.png \
	icons/programs_16x16.xpm \
	icons/programs_32x32.xpm \
	icons/reboot_16x16.xpm \
	icons/reboot_32x32.xpm \
	icons/restart_16x16.xpm \
	icons/restart_32x32.xpm \
	icons/run_16x16.xpm \
	icons/run_32x32.xpm \
	icons/save_16x16.png \
	icons/save_32x32.png \
	icons/settings_16x16.xpm \
	icons/settings_32x32.xpm \
	icons/shutdown_16x16.xpm \
	icons/shutdown_32x32.xpm \
	icons/themes_16x16.xpm \
	icons/themes_32x32.xpm \
	icons/vim_16x16.xpm \
	icons/vim_32x32.xpm \
	icons/vim_48x48.xpm \
	icons/windows_16x16.xpm \
	icons/windows_32x32.xpm \
	icons/xisp_16x16.xpm \
	icons/xisp_32x32.xpm \
	icons/xload_16x16.xpm \
	icons/xload_32x32.xpm \
	icons/xterm_16x16.xpm \
	icons/xterm_32x32.xpm \
	icons/xv_16x16.xpm \
	icons/xv_32x32.xpm \
	ledclock/a.xpm \
	ledclock/colon.xpm \
	ledclock/dot.xpm \
	ledclock/m.xpm \
	ledclock/n0.xpm \
	ledclock/n1.xpm \
	ledclock/n2.xpm \
	ledclock/n3.xpm \
	ledclock/n4.xpm \
	ledclock/n5.xpm \
	ledclock/n6.xpm \
	ledclock/n7.xpm \
	ledclock/n8.xpm \
	ledclock/n9.xpm \
	ledclock/percent.xpm \
	ledclock/p.xpm \
	ledclock/slash.xpm \
	ledclock/space.xpm \
	mailbox/errmail.xpm \
	mailbox/mail.xpm \
	mailbox/newmail.xpm \
	mailbox/nomail.xpm \
	mailbox/unreadmail.xpm \
	taskbar/collapse.xpm \
	taskbar/debian.xpm \
	taskbar/desktop.xpm \
	taskbar/expand.xpm \
	taskbar/icewm.xpm \
	taskbar/linux1.xpm \
	taskbar/linux20.xpm \
	taskbar/linux2.xpm \
	taskbar/linux.xpm \
	taskbar/start.xpm \
	taskbar/windows.xpm \
	taskbar/xfreeos2.xpm \
	themes/icedesert/closeA.xpm \
	themes/icedesert/closeI.xpm \
	themes/icedesert/closeO.xpm \
	themes/icedesert/default.theme \
	themes/icedesert/maximizeA.xpm \
	themes/icedesert/maximizeI.xpm \
	themes/icedesert/maximizeO.xpm \
	themes/icedesert/menuButtonA.xpm \
	themes/icedesert/menuButtonI.xpm \
	themes/icedesert/menuButtonO.xpm \
	themes/icedesert/minimizeA.xpm \
	themes/icedesert/minimizeI.xpm \
	themes/icedesert/minimizeO.xpm \
	themes/icedesert/restoreA.xpm \
	themes/icedesert/restoreI.xpm \
	themes/icedesert/restoreO.xpm \
	themes/icedesert/titleAB.xpm \
	themes/icedesert/titleAT.xpm \
	themes/icedesert/titleIB.xpm \
	themes/icedesert/titleIT.xpm \
	themes/Infadel2/closeA.xpm \
	themes/Infadel2/closeI.xpm \
	themes/Infadel2/cursors/left.xpm \
	themes/Infadel2/cursors/move.xpm \
	themes/Infadel2/cursors/right.xpm \
	themes/Infadel2/cursors/sizeBL.xpm \
	themes/Infadel2/cursors/sizeBR.xpm \
	themes/Infadel2/cursors/sizeB.xpm \
	themes/Infadel2/cursors/sizeL.xpm \
	themes/Infadel2/cursors/sizeR.xpm \
	themes/Infadel2/cursors/sizeTL.xpm \
	themes/Infadel2/cursors/sizeTR.xpm \
	themes/Infadel2/cursors/sizeT.xpm \
	themes/Infadel2/default.theme \
	themes/Infadel2/depthA.xpm \
	themes/Infadel2/depthI.xpm \
	themes/Infadel2/Ergonomic.theme \
	themes/Infadel2/fonts.dir.default \
	themes/Infadel2/hideA.xpm \
	themes/Infadel2/hideI.xpm \
	themes/Infadel2/icons/app_16x16.xpm \
	themes/Infadel2/icons/folder_16x16.xpm \
	themes/Infadel2/icons/folder_32x32.xpm \
	themes/Infadel2/mailbox/errmail.xpm \
	themes/Infadel2/mailbox/mail.xpm \
	themes/Infadel2/mailbox/newmail.xpm \
	themes/Infadel2/mailbox/nomail.xpm \
	themes/Infadel2/mailbox/unreadmail.xpm \
	themes/Infadel2/maximizeA.xpm \
	themes/Infadel2/maximizeI.xpm \
	themes/Infadel2/menuButtonA.xpm \
	themes/Infadel2/menuButtonI.xpm \
	themes/Infadel2/minimizeA.xpm \
	themes/Infadel2/minimizeI.xpm \
	themes/Infadel2/Overloaded.theme \
	themes/Infadel2/restoreA.xpm \
	themes/Infadel2/restoreI.xpm \
	themes/Infadel2/rolldownA.xpm \
	themes/Infadel2/rolldownI.xpm \
	themes/Infadel2/rollupA.xpm \
	themes/Infadel2/rollupI.xpm \
	themes/Infadel2/snap.pcf \
	themes/Infadel2/taskbar/linux.xpm \
	themes/Infadel2/taskbar/start.xpm \
	themes/Infadel2/taskbar/windows.xpm \
	themes/Infadel2/titleAB.xpm \
	themes/Infadel2/titleAJ.xpm \
	themes/Infadel2/titleAM.xpm \
	themes/Infadel2/titleAP.xpm \
	themes/Infadel2/titleAQ.xpm \
	themes/Infadel2/titleAR.xpm \
	themes/Infadel2/titleAS.xpm \
	themes/Infadel2/titleAT.xpm \
	themes/Infadel2/titleIB.xpm \
	themes/Infadel2/titleIJ.xpm \
	themes/Infadel2/titleIM.xpm \
	themes/Infadel2/titleIP.xpm \
	themes/Infadel2/titleIQ.xpm \
	themes/Infadel2/titleIR.xpm \
	themes/Infadel2/titleIS.xpm \
	themes/Infadel2/titleIT.xpm \
	themes/metal2/closeA.xpm \
	themes/metal2/closeI.xpm \
	themes/metal2/default.theme \
	themes/metal2/depthA.xpm \
	themes/metal2/depthI.xpm \
	themes/metal2/dframeABL.xpm \
	themes/metal2/dframeABR.xpm \
	themes/metal2/dframeAB.xpm \
	themes/metal2/dframeAL.xpm \
	themes/metal2/dframeAR.xpm \
	themes/metal2/dframeATL.xpm \
	themes/metal2/dframeATR.xpm \
	themes/metal2/dframeAT.xpm \
	themes/metal2/dframeIBL.xpm \
	themes/metal2/dframeIBR.xpm \
	themes/metal2/dframeIB.xpm \
	themes/metal2/dframeIL.xpm \
	themes/metal2/dframeIR.xpm \
	themes/metal2/dframeITL.xpm \
	themes/metal2/dframeITR.xpm \
	themes/metal2/dframeIT.xpm \
	themes/metal2/frameABL.xpm \
	themes/metal2/frameABR.xpm \
	themes/metal2/frameAB.xpm \
	themes/metal2/frameAL.xpm \
	themes/metal2/frameAR.xpm \
	themes/metal2/frameATL.xpm \
	themes/metal2/frameATR.xpm \
	themes/metal2/frameAT.xpm \
	themes/metal2/frameIBL.xpm \
	themes/metal2/frameIBR.xpm \
	themes/metal2/frameIB.xpm \
	themes/metal2/frameIL.xpm \
	themes/metal2/frameIR.xpm \
	themes/metal2/frameITL.xpm \
	themes/metal2/frameITR.xpm \
	themes/metal2/frameIT.xpm \
	themes/metal2/hideA.xpm \
	themes/metal2/hideI.xpm \
	themes/metal2/maximizeA.xpm \
	themes/metal2/maximizeI.xpm \
	themes/metal2/menuButtonA.xpm \
	themes/metal2/menuButtonI.xpm \
	themes/metal2/minimizeA.xpm \
	themes/metal2/minimizeI.xpm \
	themes/metal2/restoreA.xpm \
	themes/metal2/restoreI.xpm \
	themes/metal2/rolldownA.xpm \
	themes/metal2/rolldownI.xpm \
	themes/metal2/rollupA.xpm \
	themes/metal2/rollupI.xpm \
	themes/metal2/titleAB.xpm \
	themes/metal2/titleAL.xpm \
	themes/metal2/titleAM.xpm \
	themes/metal2/titleAP.xpm \
	themes/metal2/titleAR.xpm \
	themes/metal2/titleAS.xpm \
	themes/metal2/titleAT.xpm \
	themes/metal2/titleIB.xpm \
	themes/metal2/titleIL.xpm \
	themes/metal2/titleIM.xpm \
	themes/metal2/titleIP.xpm \
	themes/metal2/titleIR.xpm \
	themes/metal2/titleIS.xpm \
	themes/metal2/titleIT.xpm \
	themes/motif/close.xpm \
	themes/motif/default.theme \
	themes/motif/maximize.xpm \
	themes/motif/menu.xpm \
	themes/motif/minimize.xpm \
	themes/motif/restore.xpm \
	themes/win95/close.xpm \
	themes/win95/default.theme \
	themes/win95/maximize.xpm \
	themes/win95/minimize.xpm \
	themes/win95/restore.xpm \
	themes/default/closeA.xpm \
	themes/default/closeI.xpm \
	themes/default/default.theme \
	themes/default/depthA.xpm \
	themes/default/depthI.xpm \
	themes/default/hideA.xpm \
	themes/default/hideI.xpm \
	themes/default/maximizeA.xpm \
	themes/default/maximizeI.xpm \
	themes/default/menuButtonA.xpm \
	themes/default/menuButtonI.xpm \
	themes/default/minimizeA.xpm \
	themes/default/minimizeI.xpm \
	themes/default/restoreA.xpm \
	themes/default/restoreI.xpm \
	themes/default/rolldownA.xpm \
	themes/default/rolldownI.xpm \
	themes/default/rollupA.xpm \
	themes/default/rollupI.xpm \
	themes/default/default.png \
	themes/CrystalBlue/taskbar/desktop.xpm \
	themes/CrystalBlue/taskbar/taskbuttonminimized.xpm \
	themes/CrystalBlue/taskbar/toolbuttonbg.xpm \
	themes/CrystalBlue/taskbar/taskbuttonbg.xpm \
	themes/CrystalBlue/taskbar/taskbarbg.xpm \
	themes/CrystalBlue/taskbar/expand.xpm \
	themes/CrystalBlue/taskbar/windows.xpm \
	themes/CrystalBlue/taskbar/icewm.xpm \
	themes/CrystalBlue/taskbar/taskbuttonactive.xpm \
	themes/CrystalBlue/taskbar/collapse.xpm \
	themes/CrystalBlue/ledclock/dot.xpm \
	themes/CrystalBlue/ledclock/n3.xpm \
	themes/CrystalBlue/ledclock/n8.xpm \
	themes/CrystalBlue/ledclock/n1.xpm \
	themes/CrystalBlue/ledclock/m.xpm \
	themes/CrystalBlue/ledclock/space.xpm \
	themes/CrystalBlue/ledclock/n5.xpm \
	themes/CrystalBlue/ledclock/p.xpm \
	themes/CrystalBlue/ledclock/n2.xpm \
	themes/CrystalBlue/ledclock/colon.xpm \
	themes/CrystalBlue/ledclock/n9.xpm \
	themes/CrystalBlue/ledclock/n7.xpm \
	themes/CrystalBlue/ledclock/n6.xpm \
	themes/CrystalBlue/ledclock/n0.xpm \
	themes/CrystalBlue/ledclock/n4.xpm \
	themes/CrystalBlue/ledclock/slash.xpm \
	themes/CrystalBlue/ledclock/a.xpm \
	themes/CrystalBlue/rolldownO.xpm \
	themes/CrystalBlue/frameAT.xpm \
	themes/CrystalBlue/frameATL.xpm \
	themes/CrystalBlue/frameITL.xpm \
	themes/CrystalBlue/titleAJ.xpm \
	themes/CrystalBlue/titleAM.xpm \
	themes/CrystalBlue/rollupA.xpm \
	themes/CrystalBlue/titleIQ.xpm \
	themes/CrystalBlue/dframeATR.xpm \
	themes/CrystalBlue/frameATR.xpm \
	themes/CrystalBlue/titleAB.xpm \
	themes/CrystalBlue/restoreA.xpm \
	themes/CrystalBlue/frameAL.xpm \
	themes/CrystalBlue/default.theme \
	themes/CrystalBlue/frameIBR.xpm \
	themes/CrystalBlue/frameIBL.xpm \
	themes/CrystalBlue/minimize.xpm \
	themes/CrystalBlue/titleIT.xpm \
	themes/CrystalBlue/dframeABR.xpm \
	themes/CrystalBlue/dframeIBR.xpm \
	themes/CrystalBlue/titleIS.xpm \
	themes/CrystalBlue/frameAB.xpm \
	themes/CrystalBlue/rolldownA.xpm \
	themes/CrystalBlue/frameABL.xpm \
	themes/CrystalBlue/closeA.xpm \
	themes/CrystalBlue/dframeABL.xpm \
	themes/CrystalBlue/close.xpm \
	themes/CrystalBlue/frameIR.xpm \
	themes/CrystalBlue/frameABR.xpm \
	themes/CrystalBlue/menuButtonI.xpm \
	themes/CrystalBlue/titleIM.xpm \
	themes/CrystalBlue/closeO.xpm \
	themes/CrystalBlue/restoreO.xpm \
	themes/CrystalBlue/titleAQ.xpm \
	themes/CrystalBlue/rollupO.xpm \
	themes/CrystalBlue/dframeITL.xpm \
	themes/CrystalBlue/dframeIL.xpm \
	themes/CrystalBlue/dframeIBL.xpm \
	themes/CrystalBlue/titleIB.xpm \
	themes/CrystalBlue/titleAP.xpm \
	themes/CrystalBlue/frameITR.xpm \
	themes/CrystalBlue/frameIB.xpm \
	themes/CrystalBlue/titleAS.xpm \
	themes/CrystalBlue/dframeAT.xpm \
	themes/CrystalBlue/titleIJ.xpm \
	themes/CrystalBlue/frameIT.xpm \
	themes/CrystalBlue/dframeIT.xpm \
	themes/CrystalBlue/menuButtonA.xpm \
	themes/CrystalBlue/dframeITR.xpm \
	themes/CrystalBlue/dframeIB.xpm \
	themes/CrystalBlue/maximizeO.xpm \
	themes/CrystalBlue/dframeAB.xpm \
	themes/CrystalBlue/dframeAL.xpm \
	themes/CrystalBlue/menusel.xpm \
	themes/CrystalBlue/dframeIR.xpm \
	themes/CrystalBlue/minimizeO.xpm \
	themes/CrystalBlue/dframeAR.xpm \
	themes/CrystalBlue/minimizeA.xpm \
	themes/CrystalBlue/titleAT.xpm \
	themes/CrystalBlue/menubg.xpm \
	themes/CrystalBlue/rollup.xpm \
	themes/CrystalBlue/maximize.xpm \
	themes/CrystalBlue/restore.xpm \
	themes/CrystalBlue/dframeATL.xpm \
	themes/CrystalBlue/frameIL.xpm \
	themes/CrystalBlue/frameAR.xpm \
	themes/CrystalBlue/maximizeA.xpm \
	themes/CrystalBlue/rolldown.xpm \
	themes/CrystalBlue/titleIP.xpm \
	themes/Helix/closeA.xpm \
	themes/Helix/closeI.xpm \
	themes/Helix/maximizeA.xpm \
	themes/Helix/maximizeI.xpm \
	themes/Helix/menuButtonA.xpm \
	themes/Helix/menuButtonI.xpm \
	themes/Helix/minimizeA.xpm \
	themes/Helix/minimizeI.xpm \
	themes/Helix/restoreA.xpm \
	themes/Helix/restoreI.xpm \
	themes/Helix/titleAB.xpm \
	themes/Helix/titleAM.xpm \
	themes/Helix/titleAP.xpm \
	themes/Helix/titleAS.xpm \
	themes/Helix/titleAT.xpm \
	themes/Helix/titleIB.xpm \
	themes/Helix/titleIP.xpm \
	themes/Helix/titleIS.xpm \
	themes/Helix/titleIT.xpm \
	themes/Helix/default.theme \
	themes/NanoBlue/closeA.xpm \
	themes/NanoBlue/closeI.xpm \
	themes/NanoBlue/closeO.xpm \
	themes/NanoBlue/dframeAB.xpm \
	themes/NanoBlue/dframeABL.xpm \
	themes/NanoBlue/dframeABR.xpm \
	themes/NanoBlue/dframeAL.xpm \
	themes/NanoBlue/dframeAR.xpm \
	themes/NanoBlue/dframeAT.xpm \
	themes/NanoBlue/dframeATL.xpm \
	themes/NanoBlue/dframeATR.xpm \
	themes/NanoBlue/dframeIB.xpm \
	themes/NanoBlue/dframeIBL.xpm \
	themes/NanoBlue/dframeIBR.xpm \
	themes/NanoBlue/dframeIL.xpm \
	themes/NanoBlue/dframeIR.xpm \
	themes/NanoBlue/dframeIT.xpm \
	themes/NanoBlue/dframeITL.xpm \
	themes/NanoBlue/dframeITR.xpm \
	themes/NanoBlue/drameAB.xpm \
	themes/NanoBlue/drameATR.xpm \
	themes/NanoBlue/eos.jpg \
	themes/NanoBlue/expandA.xpm \
	themes/NanoBlue/expandI.xpm \
	themes/NanoBlue/expandO.xpm \
	themes/NanoBlue/frameAB.xpm \
	themes/NanoBlue/frameABL.xpm \
	themes/NanoBlue/frameABR.xpm \
	themes/NanoBlue/frameAL.xpm \
	themes/NanoBlue/frameAR.xpm \
	themes/NanoBlue/frameAT.xpm \
	themes/NanoBlue/frameATL.xpm \
	themes/NanoBlue/frameATR.xpm \
	themes/NanoBlue/frameIB.xpm \
	themes/NanoBlue/frameIBL.xpm \
	themes/NanoBlue/frameIBR.xpm \
	themes/NanoBlue/frameIL.xpm \
	themes/NanoBlue/frameIR.xpm \
	themes/NanoBlue/frameIT.xpm \
	themes/NanoBlue/frameITL.xpm \
	themes/NanoBlue/frameITR.xpm \
	themes/NanoBlue/maximizeA.xpm \
	themes/NanoBlue/maximizeI.xpm \
	themes/NanoBlue/maximizeO.xpm \
	themes/NanoBlue/menuButtonA.xpm \
	themes/NanoBlue/menuButtonI.xpm \
	themes/NanoBlue/menuButtonO.xpm \
	themes/NanoBlue/menusel.xpm \
	themes/NanoBlue/menusep.xpm \
	themes/NanoBlue/minimizeA.xpm \
	themes/NanoBlue/minimizeI.xpm \
	themes/NanoBlue/minimizeO.xpm \
	themes/NanoBlue/restoreA.xpm \
	themes/NanoBlue/restoreI.xpm \
	themes/NanoBlue/restoreO.xpm \
	themes/NanoBlue/titleAB.xpm \
	themes/NanoBlue/titleAL.xpm \
	themes/NanoBlue/titleAM.xpm \
	themes/NanoBlue/titleAP.xpm \
	themes/NanoBlue/titleAR.xpm \
	themes/NanoBlue/titleAS.xpm \
	themes/NanoBlue/titleAT.xpm \
	themes/NanoBlue/titleIB.xpm \
	themes/NanoBlue/titleIL.xpm \
	themes/NanoBlue/titleIM.xpm \
	themes/NanoBlue/titleIP.xpm \
	themes/NanoBlue/titleIR.xpm \
	themes/NanoBlue/titleIS.xpm \
	themes/NanoBlue/titleIT.xpm \
	themes/NanoBlue/taskbar/desktop.xpm \
	themes/NanoBlue/taskbar/icewm.xpm \
	themes/NanoBlue/taskbar/taskbarbg.xpm \
	themes/NanoBlue/taskbar/taskbuttonactive.xpm \
	themes/NanoBlue/taskbar/taskbuttonbg.xpm \
	themes/NanoBlue/taskbar/taskbuttonminimized.xpm \
	themes/NanoBlue/taskbar/toolbuttonbg.xpm \
	themes/NanoBlue/taskbar/windows.xpm \
	themes/NanoBlue/taskbar/workspacebuttonactive.xpm \
	themes/NanoBlue/taskbar/workspacebuttonbg.xpm \
	themes/NanoBlue/icons/IceWM_16x16.xpm \
	themes/NanoBlue/icons/IceWM_32x32.xpm \
	themes/NanoBlue/icons/app_16x16.xpm \
	themes/NanoBlue/icons/firefox_16x16.xpm \
	themes/NanoBlue/icons/firefox_32x32.xpm \
	themes/NanoBlue/icons/folder_16x16.xpm \
	themes/NanoBlue/icons/folder_32x32.xpm \
	themes/NanoBlue/icons/gimp_16x16.xpm \
	themes/NanoBlue/icons/gimp_32x32.xpm \
	themes/NanoBlue/icons/mplayer_16x16.xpm \
	themes/NanoBlue/icons/mplayer_32x32.xpm \
	themes/NanoBlue/icons/thunderbird_16x16.xpm \
	themes/NanoBlue/icons/thunderbird_32x32.xpm \
	themes/NanoBlue/icons/xterm_16x16.xpm \
	themes/NanoBlue/icons/xterm_32x32.xpm \
	themes/NanoBlue/ledclock/a.xpm \
	themes/NanoBlue/ledclock/colon.xpm \
	themes/NanoBlue/ledclock/dot.xpm \
	themes/NanoBlue/ledclock/m.xpm \
	themes/NanoBlue/ledclock/n0.xpm \
	themes/NanoBlue/ledclock/n1.xpm \
	themes/NanoBlue/ledclock/n2.xpm \
	themes/NanoBlue/ledclock/n3.xpm \
	themes/NanoBlue/ledclock/n4.xpm \
	themes/NanoBlue/ledclock/n5.xpm \
	themes/NanoBlue/ledclock/n6.xpm \
	themes/NanoBlue/ledclock/n7.xpm \
	themes/NanoBlue/ledclock/n8.xpm \
	themes/NanoBlue/ledclock/n9.xpm \
	themes/NanoBlue/ledclock/p.xpm \
	themes/NanoBlue/ledclock/slash.xpm \
	themes/NanoBlue/ledclock/space.xpm \
	themes/NanoBlue/taskbar/collapse.xpm \
	themes/NanoBlue/taskbar/expand.xpm \
	themes/NanoBlue/default.theme
